testsuite/c_test/enhancec_test/ENC0136-declaration_and_definition_inconsistent_err/declaration_and_definition_inconsistent_err.c
/*
 * Copyright (c) [2020-2022] Huawei Technologies Co.,Ltd.All rights reserved.
 *
 * OpenArkCompiler is licensed under Mulan PSL v2.
 * You can use this software according to the terms and conditions of the Mulan PSL v2.
 * You may obtain a copy of Mulan PSL v2 at:
 *
 *     http://license.coscl.org.cn/MulanPSL2
 *
 * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER
 * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR
 * FIT FOR A PARTICULAR PURPOSE.
 * See the Mulan PSL v2 for more details.
 */



#include <stdio.h>
#include <stdlib.h>

void test1();
SAFE void test1() {} // CHECK-NOT: [[# @LINE ]] error

SAFE void test();
UNSAFE void test() {} // CHECK: [[# @LINE ]] error: The function test declaration and definition security attributes are inconsistent.

